--- a/src/app/pages/user-create/user-create.component.html
+++ b/src/app/pages/user-create/user-create.component.html
@@ -187,9 +187,9 @@
       </mat-card-content>
       <br />
       <mat-card-actions fxLayoutAlign="end">
-        <button mat-stroked-button (click)="cancel()" class="btn-back">Cancel</button>
+        <button mat-stroked-button (click)="cancel()" class="btn-back">cancel</button>
         <button type="submit" mat-stroked-button [disabled]="!form.valid" class="btn-primary">
-          Submit
+          submit
         </button>
       </mat-card-actions>
     </form>
