--- a/src/app/pages/user-update/user-update.component.html
+++ b/src/app/pages/user-update/user-update.component.html
@@ -127,9 +127,9 @@
       </mat-card-content>
       <br />
       <mat-card-actions fxLayoutAlign="end">
-        <button mat-stroked-button (click)="cancel()" class="btn-back">Cancel
+        <button mat-stroked-button (click)="cancel()" class="btn-back">cancel
         </button>
-        <button type="submit" mat-stroked-button [disabled]="!form.valid" class="btn-primary">Submit
+        <button type="submit" mat-stroked-button [disabled]="!form.valid" class="btn-primary">submit
         </button>
       </mat-card-actions>
     </form>
