--- a/src/app/pages/user-update/user-update.component.html
+++ b/src/app/pages/user-update/user-update.component.html
@@ -7,7 +7,7 @@
 -->
 
 <div fxLayout="column">
-  <mat-card style="margin: 1% 20% 1% 20%; padding: 0px; background-color: #ffffff;" class="mat-elevation-z8 user-card">
+  <mat-card style="margin: 5% auto; padding: 0px; background-color: #ffffff;" class="mat-elevation-z8 user-card">
     <mat-card-title class="user-title">Edit User Information</mat-card-title>
     <br />
     <form [formGroup]="form" (ngSubmit)="updateUser()" #userForm autocomplete="off" style="padding: 16px;">
