--- a/src/app/pages/role-list/role-list.component.css
+++ b/src/app/pages/role-list/role-list.component.css
@@ -7,17 +7,16 @@
 */
 
 /************* Main Mat-Card Styling *************/
-.users-list-card {
+.roles-list-card {
   border-radius: 0;
   padding: 0;
   background-color: #ffffff;
+width: 650px;
+  margin: 0 auto;
 }
 
+
 /************* Roles Table Styling *************/
-th,
-td {
-  width: 180px;
-}
 
 th {
   font-family: "Karla", sans-serif;
@@ -50,6 +49,10 @@ th.mat-header-cell:last-of-type,
 td.mat-cell:last-of-type,
 td.mat-footer-cell:last-of-type {
   padding-right: 0;
+}
+
+tr.mat-header-row {
+  height: 45px;
 }
 
 /************* Add User Button Styling *************/
