--- a/src/app/pages/security-question-list/security-question-list.component.html
+++ b/src/app/pages/security-question-list/security-question-list.component.html
@@ -32,7 +32,7 @@
         <ng-container matColumnDef="functions">
           <!-- functions for editing and deleting a user -->
           <th mat-header-cell *matHeaderCellDef>Functions</th>
-          <td mat-cell *matCellDef="let element">
+          <td mat-cell *matCellDef="let element" style="width: 100px;">
             <!-- edit -->
             <button
               mat-icon-button
