--- a/src/app/pages/user-list/user-list.component.css
+++ b/src/app/pages/user-list/user-list.component.css
@@ -14,6 +14,9 @@
   border-radius: 0;
   padding: 0;
   background-color: #ffffff;
+  min-width: 350px;
+  max-width: 85%;
+  margin: 0 auto;
 }
 
 /************* Users Table Styling *************/
