--- a/src/app/pages/user-list/user-list.component.html
+++ b/src/app/pages/user-list/user-list.component.html
@@ -72,7 +72,7 @@
 
           <!-- functions for editing and deleting a user -->
           <th mat-header-cell *matHeaderCellDef></th>
-          <td mat-cell *matCellDef="let element">
+          <td mat-cell *matCellDef="let element" style="width: 100px;">
 
             <button mat-icon-button routerLink="/session/users/{{ element._id }}">
               <mat-icon color="black" class="functions-icon">edit</mat-icon>
