--- a/src/app/shared/auth-layout/auth-layout.component.css
+++ b/src/app/shared/auth-layout/auth-layout.component.css
@@ -19,7 +19,7 @@ span {
 .main-content {
   padding-left: 0px;
   padding-bottom: 8%;
-  margin: 2% 12% 5%;
+  margin: 2% auto 5%;
 }
 
 .footer-content {
