--- a/src/app/pages/security-question-edit/security-question-edit.component.css
+++ b/src/app/pages/security-question-edit/security-question-edit.component.css
@@ -8,11 +8,15 @@
 
 .dialog-questions {
   height: 100%;
+
 }
 
 .mat-dialog-content {
   overflow: inherit;
   font-family: 'Karla', sans-serif;
+  margin: 0;
+  padding: 0;
+  color: black;
 }
 
 .btn-dialog {
@@ -20,12 +24,11 @@
   font-size: 14px;
 }
 
-.btn-dialog-cancel {
-  border-radius: 0;
+.btn-back {
+  border-radius: 0px;
   font-size: 14px;
-  color: rgb(240, 240, 240);
-  background-color: #888888;
 }
+
 
 .mat-input-element {
   font-family: 'Karla', sans-serif;
@@ -33,8 +36,18 @@
 
 .dialog-title {
   margin-bottom: 40px;
+  background-color: #5b5b5b;
+  padding: 15px;
+  color: white;
 }
 
 .error-question {
   font-size: 11pt;
 }
+
+::ng-deep.mat-dialog-container {
+  padding: 0px !important;
+  background-color: #ffffff;
+}
+
+
