--- a/src/app/shared/delete-record-dialog/delete-record-dialog.component.css
+++ b/src/app/shared/delete-record-dialog/delete-record-dialog.component.css
@@ -1,5 +1,12 @@
 .delete-title {
   margin-bottom: 40px;
+  background-color: #5b5b5b;
+  padding: 15px;
+}
+
+.dialog-content {
+  padding: 15px;
+  color: black;
 }
 
 .dialog-text {
@@ -11,6 +18,12 @@
   font-size: 14px;
 }
 
+.btn-back {
+  border-radius: 0px;
+  font-size: 14px;
+}
+
+
 .btn-dialog-cancel {
   border-radius: 0;
   font-size: 14px;
@@ -19,5 +32,14 @@
 }
 
 .btns-div {
+  padding: 15px;
   margin-top: 20px;
+  margin-bottom: 12px;
 }
+
+
+::ng-deep.mat-dialog-container {
+  padding: 0px !important;
+  background-color: #ffffff;
+}
+
