--- a/src/app/shared/invoice-dialog/invoice-dialog.component.css
+++ b/src/app/shared/invoice-dialog/invoice-dialog.component.css
@@ -4,11 +4,16 @@
 // Date: 5 May 2022
 // Authors: Evan Durkin, Keith Hall,
 // Gustavo Roo Gonzalez, and Gunner Bradley
-// Description: line item interface
+// Description: CSS file for the invoice-dialog component.
 ============================================
 */
 
-export interface LineItem {
-  serviceName?: string,
-  price?: number
+mat-card-title {
+  text-align: center;
+  font-size: 32px;
+  font-family: 'Aldrich';
+  margin-bottom: 5%;
+}
+mat-card-subtitle {
+  float: right;
 }
