--- a/src/app/pages/role-details/role-details.component.html
+++ b/src/app/pages/role-details/role-details.component.html
@@ -6,47 +6,18 @@
     Description: Html file for the role-details component.
 -->
 
-<div fxLayout="column">
-  <mat-card class="mat-elevation-z8 hp-card-sm">
-    <mat-card-title>Role Details</mat-card-title>
+<mat-dialog-content fxFlex fxLayout="column" [formGroup]="roleForm" class="dialog-questions" >
+  <h2 mat-dialog-title class="dialog-title">Edit Security Question</h2>
 
-    <br />
-    <form [formGroup]="form" (ngSubmit)="save()" #roleForm>
-      <mat-card-content>
-        <div fxLayout="column" fxLayoutGap="10px">
-          <mat-form-field fxFlex>
-            <mat-label>Role</mat-label>
-            <input
-              matInput
-              [formControl]="form.controls['text']"
-              placeholder="role"
-            />
+  <mat-form-field style="padding: 15px; margin: 0px;">
+      <input type="text" placeholder="Role" matInput formControlName="text" [value]="roleData.text"/>
+      <mat-error *ngIf="roleForm.controls.text.hasError('required') && roleForm.controls.text.touched" class="error-question">
+        You must provide a name for the role.
+      </mat-error>
+  </mat-form-field>
 
-            <mat-error
-              class="error"
-              *ngIf="
-                form.controls['text'].hasError('required') &&
-                form.controls['text'].touched
-              "
-            >
-              Role is required.
-            </mat-error>
-          </mat-form-field>
-        </div>
-      </mat-card-content>
-
-      <br />
-      <mat-card-actions align="end">
-        <button mat-raised-button (click)="cancel()" color="accent">
-          Cancel
-        </button>
-        <button
-          mat-raised-button
-          [disabled]="!form.valid"
-        >
-          Submit
-        </button>
-      </mat-card-actions>
-    </form>
-  </mat-card>
-</div>
+  <div mat-dialog-actions align="end" style="padding: 15px; margin: 0px;">
+    <button mat-button (click)="cancel()" class="btn-back">cancel</button>
+    <button mat-raised-button (click)="save()"  class="btn-primary btn-dialog">submit</button>
+  </div>
+</mat-dialog-content>
