adding styling changes

--- a/src/app/pages/role-details/role-details.component.css
+++ b/src/app/pages/role-details/role-details.component.css
@@ -42,12 +42,13 @@
 }
 
 .error-question {
-  font-size: 11pt;
+  font-size: 10pt;
 }
 
 ::ng-deep.mat-dialog-container {
   padding: 0px !important;
   background-color: #ffffff;
+  border-radius: 0px;
 }
 
 
