--- a/src/app/pages/security-question-edit/security-question-edit.component.html
+++ b/src/app/pages/security-question-edit/security-question-edit.component.html
@@ -16,7 +16,7 @@
       </mat-error>
   </mat-form-field>
 
-  <div mat-dialog-actions align="end" style="padding: 15px; margin: 0px;">
+  <div mat-dialog-actions fxLayoutAlign="end" style="padding: 15px; margin: 0px;">
     <button mat-button (click)="cancel()" class="btn-back">cancel</button>
     <button mat-raised-button (click)="editQuestion()"  class="btn-primary btn-dialog">submit</button>
   </div>
