--- a/src/app/shared/base-layout/base-layout.component.html
+++ b/src/app/shared/base-layout/base-layout.component.html
@@ -16,11 +16,17 @@
         <a routerLink="/" class="logo-navbar">
           Bob's <br />Computer Repair Shop
         </a>
+        <a routerLink="/" class="navbar-link">
+          Home
+        </a>
+        <a routerLink="/guest-services" class="navbar-link">
+          Services
+        </a>
         <a routerLink="/about" class="navbar-link">
-          about
+          About
         </a>
         <a routerLink="contact" class="navbar-link">
-          contact
+          Contact
         </a>
       </div>
     </mat-toolbar>
