Service repair page fix

--- a/src/app/shared/invoice-dialog/invoice-dialog.component.html
+++ b/src/app/shared/invoice-dialog/invoice-dialog.component.html
@@ -36,7 +36,7 @@
 
           <ng-container matColumnDef="name">
             <th mat-header-cell *matHeaderCellDef>Name</th>
-            <td mat-cell *matCellDef="let item">{{ item.title }}</td>
+            <td mat-cell *matCellDef="let item">{{ item.serviceName }}</td>
           </ng-container>
           <ng-container matColumnDef="price">
             <th mat-header-cell *matHeaderCellDef>Cost</th>
