--- a/src/app/pages/dashboard-employee/dashboard-employee.component.html
+++ b/src/app/pages/dashboard-employee/dashboard-employee.component.html
@@ -15,7 +15,7 @@
       <h2>Services (select)</h2>
 
       <!-- Buttons -->
-      <div 
+      <div
 
         *ngFor="let product of products; let i = index"
 
@@ -35,7 +35,7 @@
 
               <ng-container matColumnDef="name">
                 <th mat-header-cell *matHeaderCellDef>Name</th>
-                <td mat-cell *matCellDef="let item">{{ item.title }}</td>
+                <td mat-cell *matCellDef="let item">{{ item.serviceName }}</td>
               </ng-container>
               <ng-container matColumnDef="price">
                 <th mat-header-cell *matHeaderCellDef>Cost</th>
