--- a/src/app/pages/dashboard-employee/dashboard-employee.component.html
+++ b/src/app/pages/dashboard-employee/dashboard-employee.component.html
@@ -6,73 +6,4 @@
     Description: Html file for the dashboard-employee component.
 -->
 
-<div fxLayout="column" fxFlex="100%" class="main-welcome">
-  <p-toast></p-toast>
-
-  <div style="padding-bottom:-20px" fxLayout="row" fxLayoutAlign="center" fxLayoutGap="7%" style="width: 100%">
-
-    <div fxLayout="column" fxLayoutAlign="center" fxLayoutGap="5px" style="max-width: fit-content;cursor:pointer">
-      <h2>Services (select)</h2>
-
-      <!-- Buttons -->
-      <div
-
-        *ngFor="let product of products; let i = index"
-
-        (click)="addToInvoice(product.text, product.cost)" >
-        {{ product.text }}  <!-- Product and price columns -->
-      </div>
-    </div>
-
-    <!-- Right side -->
-    <div fxFlex="60%" fxLayout="column" fxLayoutAlign="space-between" fxLayoutGap="15px">
-
-      <div>
-        <!-- Data table-->
-        <mat-card fxFlex style="margin-left:20px">
-          <mat-card-content>
-            <table #table mat-table [dataSource]="dataTableSource" style="width: 100%;">
-
-              <ng-container matColumnDef="name">
-                <th mat-header-cell *matHeaderCellDef>Name</th>
-                <td mat-cell *matCellDef="let item">{{ item.title }}</td>
-              </ng-container>
-              <ng-container matColumnDef="price">
-                <th mat-header-cell *matHeaderCellDef>Cost</th>
-                <td mat-cell *matCellDef="let item">{{ item.price | currency}}</td>
-              </ng-container>
-              <ng-container matColumnDef="functions">
-                <th mat-header-cell *matHeaderCellDef></th>
-                <td mat-cell *matCellDef="let item; let i = index">
-                  <button mat-icon-button>
-                    <mat-icon color="primary" (click)="deleteFromInvoice(i, item.title, item.price, item.parts, item.hours)">delete</mat-icon>
-                  </button>
-                </td>
-              </ng-container>
-
-                <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-                <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-            </table>
-          </mat-card-content>
-        </mat-card>
-        <div fxLayoutAlign="start">
-          <button mat-raised-button type="button" color="accent" (click)="addServiceDialog()">Add Service</button>
-        </div>
-
-      </div>
-
-      <div fxLayoutAlign="space-between" style="margin-bottom:40px">
-        <!-- Total and invoice button-->
-        <div><br />
-          <!-- Total -->
-          <h1 style="margin-left:22px"><b>Total:</b>&nbsp;{{ total | currency}}</h1>
-        </div>
-
-        <!-- Invoice Button -->
-
-        <button style="width:116px" mat-raised-button color="accent" (click)="getInvoice()" [disabled]="invoice.getTotal() === 0">Invoice</button>
-      </div>
-    </div>
-  </div>
-</div>
-
+<p>dashboard-employee works!</p>
