--- a/src/app/pages/security-question-list/security-question-list.component.css
+++ b/src/app/pages/security-question-list/security-question-list.component.css
@@ -4,7 +4,7 @@
 // Date: 20 April 2022
 // Authors: Evan Durkin, Keith Hall,
 // Gustavo Roo Gonzalez, and Gunner Bradley
-// Description: Security Question List Styling
+// Description: User List Styling
 =======================================
 */
 
