--- a/src/app/shared/base-layout/base-layout.component.html
+++ b/src/app/shared/base-layout/base-layout.component.html
@@ -10,25 +10,29 @@
   <!-- navigation -->
   <nav fxFlex>
     <mat-toolbar class="toolbar">
-       <!-- logo -->
-       <a routerLink="/" class="logo-navbar">
-        Bob's <br />Computer Repair Shop
-      </a>
       <!-- navbar container -->
       <div class="navbar-container">
-        <a routerLink="/" class="navbar-link">
-          Home
-        </a>
-        <a routerLink="/guest-services" class="navbar-link">
-          Services
+        <!-- logo -->
+        <a routerLink="/" class="logo-navbar">
+          Bob's <br />Computer Repair Shop
         </a>
         <a routerLink="/about" class="navbar-link">
-          About
+          about
         </a>
         <a routerLink="contact" class="navbar-link">
-          Contact
+          contact
         </a>
       </div>
+      <div class="signInContainer">
+        <button
+        class="signInBtn"
+        routerLink="/post-session/sign-in"
+        mat-button>
+        sign-in
+      </button>
+      <br/>
+      <a routerLink="/post-session/sign-up" class="registerLink">register for an account</a>
+    </div>
     </mat-toolbar>
   </nav>
 
@@ -43,9 +47,10 @@
   <div fxFlex>
     <footer class="footer">
       <mat-toolbar class="footer-content">
-        &copy; {{ year | date: "yyyy" }} - Bob's Computer Repair Shop -&nbsp;
-         <a href="https://www.bellevue.edu/" class="footer-link" target="_blank">Bellevue University</a>
-        <a routerLink="/post-session/sign-in" class="footer-link" style="margin-left: 200px;">Employee Sign-In | Register</a>
+        <p style="margin-left: 2em">
+          &copy; {{ year | date: "yyyy" }} - Bob's Computer Repair Shop -
+          <a href="https://www.bellevue.edu/" class="bu-link" target="_blank">Bellevue University</a>
+        </p>
       </mat-toolbar>
     </footer>
   </div>
