--- a/src/app/pages/sign-up/sign-up.component.css
+++ b/src/app/pages/sign-up/sign-up.component.css
@@ -1,13 +1,4 @@
-/*
-=======================================
-// Title: Bob’s Computer Repair Shop
-// Date: 22 April 2022
-// Authors: Evan Durkin, Keith Hall,
-// Gustavo Roo Gonzalez, and Gunner Bradley
-// Description: Css file for the sign-up component.
-=======================================
-*/
-.card-container {
+.signup-main {
   width: 50%;
   min-width: 750px;
   min-height: 600px;
@@ -17,7 +8,7 @@
   background-color: #f5f5f6;;
 }
 
-.card-title {
+.signup-title {
   text-align: center;
   padding-top: 12px;
   padding-bottom: 12px;
@@ -25,6 +16,7 @@
   font-size: 26px;
   margin-bottom: 0;
 }
+
 .mat-tab-group {
   min-height: 400px;
 }
