--- a/src/styles.css
+++ b/src/styles.css
@@ -26,7 +26,7 @@ mat-header-row cdk-header-row ng-star-inserted {
 .btn-primary {
   font-family: 'Aldrich', sans-serif;
   color: #003716;
-  background-color: #568e67;
+  background-color: #2a623d;
   border: none;
   border-radius: 0px;
 }
