--- a/src/app/pages/dashboard-employee/dashboard-employee.component.html
+++ b/src/app/pages/dashboard-employee/dashboard-employee.component.html
@@ -9,41 +9,45 @@
 <div fxLayout="column" fxFlex="100%" class="main-welcome">
   <p-toast></p-toast>
 
-  <div style="padding-bottom:-20px" fxLayout="row" fxLayoutAlign="center" fxLayoutGap="7%" style="width: 100%">
+  <div style="padding-bottom:-20px" fxLayout="row" fxLayoutAlign="center" fxLayoutGap="7%" style="width: 100%;">
 
-    <div fxLayout="column" fxLayoutAlign="center" fxLayoutGap="5px" style="max-width: fit-content;cursor:pointer">
-      <h2>Services (select)</h2>
+    <div fxLayout="column" fxLayoutAlign="center"  style="max-width: fit-content;cursor:pointer;">
+      <h2 class="title-service">Services</h2>
+      <h4 class="subtitle-service">select a service</h4>
 
       <!-- Buttons -->
-      <div
-
+        <div class="btn-service"
         *ngFor="let product of products; let i = index"
-
-        (click)="addToInvoice(product.text, product.cost)" >
+        (click)="addToInvoice(product.text, product.cost)" >+&nbsp;
         {{ product.text }}  <!-- Product and price columns -->
       </div>
+      <!-- <h2 class="title-service">Add Additional Service</h2> -->
+      <div fxLayoutAlign="start" style="margin-top:7px">
+        <button mat-raised-button type="button" class="btn-add-service" (click)="addServiceDialog()" style="border-radius: 0px;">add additional service</button>
+      </div>
+
     </div>
 
     <!-- Right side -->
-    <div fxFlex="60%" fxLayout="column" fxLayoutAlign="space-between" fxLayoutGap="15px">
+    <div fxFlex="60%" fxLayout="column" fxLayoutAlign="space-between" >
 
-      <div>
+      <div >
         <!-- Data table-->
-        <mat-card fxFlex style="margin-left:20px">
+        <mat-card fxFlex style="background-color: #ffffff;">
           <mat-card-content>
             <table #table mat-table [dataSource]="dataTableSource" style="width: 100%;">
 
               <ng-container matColumnDef="name">
-                <th mat-header-cell *matHeaderCellDef>Name</th>
+                <th mat-header-cell *matHeaderCellDef >Name</th>
                 <td mat-cell *matCellDef="let item">{{ item.serviceName }}</td>
               </ng-container>
               <ng-container matColumnDef="price">
-                <th mat-header-cell *matHeaderCellDef>Cost</th>
-                <td mat-cell *matCellDef="let item">{{ item.price | currency}}</td>
+                <th mat-header-cell *matHeaderCellDef style="width: 80px;">Cost</th>
+                <td mat-cell *matCellDef="let item" style="width: 80px;">{{ item.price | currency}}</td>
               </ng-container>
               <ng-container matColumnDef="functions">
                 <th mat-header-cell *matHeaderCellDef></th>
-                <td mat-cell *matCellDef="let item; let i = index">
+                <td mat-cell *matCellDef="let item; let i = index" style="width: 20px;">
                   <button mat-icon-button>
                     <mat-icon color="primary" (click)="deleteFromInvoice(i, item.title, item.price, item.parts, item.hours)">delete</mat-icon>
                   </button>
@@ -55,25 +59,18 @@
             </table>
           </mat-card-content>
         </mat-card>
-        <div fxLayoutAlign="start">
-          <button mat-raised-button type="button" color="accent" (click)="addServiceDialog()">Add Service</button>
-        </div>
-
       </div>
 
-      <div fxLayoutAlign="space-between" style="margin-bottom:40px">
-        <!-- Total and invoice button-->
-        <div><br />
-          <!-- Total -->
-          <h1 style="margin-left:22px"><b>Total:</b>&nbsp;{{ total | currency}}</h1>
-        </div>
-
-        <!-- Invoice Button -->
-
-        <button style="width:116px" mat-raised-button color="accent" (click)="getInvoice()" [disabled]="invoice.getTotal() === 0">Invoice</button>
-      </div>
+              <!-- Total and invoice button-->
+              <div style="display:inline-block;">
+                <!-- Total -->
+                <h1 class="total-div">Total:&nbsp;{{ total | currency}}</h1>
+              </div>
+              <!-- Invoice Button -->
+              <div>
+                <button mat-raised-button class="btn-primary btn-invoice" (click)="getInvoice()" [disabled]="invoice.getTotal() === 0">create invoice</button>
+              </div>
     </div>
   </div>
 </div>
-
 
