--- a/src/app/shared/base-layout/base-layout.component.html
+++ b/src/app/shared/base-layout/base-layout.component.html
@@ -16,18 +16,10 @@
         <a routerLink="/" class="logo-navbar">
           Bob's <br />Computer Repair Shop
         </a>
-        <a routerLink="/" class="navbar-link">
-          Home
-        </a>
-        <a routerLink="/guest-services" class="navbar-link">
-          Services
-        </a>
-        <a routerLink="/about" class="navbar-link">
-          About
-        </a>
-        <a routerLink="contact" class="navbar-link">
-          Contact
-        </a>
+        <a routerLink="/" class="navbar-link">Home</a>
+        <a routerLink="/guest-services" class="navbar-link">Services</a>
+        <a routerLink="/about" class="navbar-link">About</a>
+        <a routerLink="contact" class="navbar-link">Contact</a>
       </div>
     </mat-toolbar>
   </nav>
