--- a/src/app/pages/services-list/services-list.component.html
+++ b/src/app/pages/services-list/services-list.component.html
@@ -22,10 +22,10 @@
     >
       <!-- mat-table with header sections for user data-->
       <table mat-table [dataSource]="services">
-        <ng-container matColumnDef="serviceName">
+        <ng-container matColumnDef="title">
           <th mat-header-cell *matHeaderCellDef>Service</th>
           <td mat-cell *matCellDef="let element">
-            {{ element.serviceName }}
+            {{ element.title }}
           </td>
         </ng-container>
 
