--- a/src/app/pages/sign-in/sign-in.component.html
+++ b/src/app/pages/sign-in/sign-in.component.html
@@ -7,7 +7,7 @@
 -->
 
   <div fxLayout="row wrap" fxLayoutAlign="center start">
-    <div fxFlex.gt-sm="45">
+    <div >
 
       <!-- Sign in card -->
       <mat-card class="mat-elevation-z5 sign-in-container">
@@ -36,7 +36,7 @@
                 <!-- Username field with placeholder-->
                 <mat-form-field appearance="fill">
                   <input type="text" matInput fxFlex [formControl]="form.controls['userName']" placeholder="Username" class="input"/>
-                  <mat-error class="error-sign-in" *ngIf="form.controls.userName.hasError('required') && form.controls.userName.touched">
+                  <mat-error class="error-sign-in" *ngIf="form.controls.userName.hasError('required') && form.controls.userName.touched" style="top: calc(100% - -0.2083333333000006em);">
                     Username is a required field.
                   </mat-error>
                 </mat-form-field>
@@ -45,7 +45,7 @@
                 <mat-form-field appearance="fill">
                   <input type="password" matInput fxFlex [formControl]="form.controls['password']" placeholder="Password"/>
                   <mat-error class="error-sign-in" *ngIf="form.controls.password.hasError('required') && form.controls.password.touched">
-                    Password must be at least 8 characters, contain one number, and one letter.
+                    Must be at least 8 characters, contain one number, and one letter.
                   </mat-error>
                 </mat-form-field>
               </mat-card-content>
