--- a/src/app/pages/services-graph/services-graph.component.html
+++ b/src/app/pages/services-graph/services-graph.component.html
@@ -1,1 +1,4 @@
-<p>services-graph works!</p>
+<h1 style="text-align: center">Purchases by Service</h1>
+<div class="pie">
+  <p-chart type="pie" [data]="data"></p-chart>
+</div>
